--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "del": "^3.0.0",
+    "gulp-cache-bust": "^1.3.0",
     "gulp-clean-css": "^3.9.0",
     "gulp-sass": "^3.1.0",
     "gulp-shell": "^0.6.3",
