--- a/package.json
+++ b/package.json
@@ -2,19 +2,20 @@
   "name": "wedding",
   "version": "1.0.0",
   "description": "Wedding Website",
-  "main": "gulpfile.js",
+  "main": "server.js",
   "dependencies": {
-    "gulp": "^3.9.1",
+    "express": "^4.16.3",
+    "gulp": "^4.0.0",
     "pump": "^1.0.3"
   },
   "devDependencies": {
     "del": "^3.0.0",
     "gulp-cache-bust": "^1.3.0",
     "gulp-clean-css": "^3.9.0",
-    "gulp-sass": "^3.1.0",
-    "gulp-shell": "^0.6.3",
+    "gulp-sass": "^4.0.1",
+    "gulp-shell": "^0.6.5",
     "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.3",
+    "gulp-useref": "^3.1.5",
     "run-sequence": "^2.2.0"
   },
   "scripts": {
