--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gulp-shell": "^0.6.5",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.5",
+    "nodemon": "^1.17.5",
     "run-sequence": "^2.2.0"
   },
   "scripts": {
