--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.16.3",
-    "gulp": "^4.0.0",
+    "mongoose": "^5.1.3",
     "pump": "^1.0.3"
   },
   "devDependencies": {
     "del": "^3.0.0",
+    "gulp": "^3.9.1",
     "gulp-cache-bust": "^1.3.0",
     "gulp-clean-css": "^3.9.0",
     "gulp-sass": "^4.0.1",
