--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Wedding Website",
   "main": "server.js",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "express": "^4.16.3",
+    "express-basic-auth": "^1.1.5",
+    "express-session": "^1.15.6",
     "mongoose": "^5.1.3",
     "pump": "^1.0.3"
   },
@@ -22,7 +25,7 @@
   },
   "scripts": {
     "dev": "node server.js dev",
-    "start" : "node server.js production"
+    "start": "node server.js production"
   },
   "repository": {
     "type": "git",
